--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@syncfusion/ej2": "^20.1.61",
+    "@syncfusion/ej2-react-calendars": "^20.1.58",
+    "@syncfusion/ej2-react-charts": "^20.1.61",
+    "@syncfusion/ej2-react-dropdowns": "^20.1.61",
+    "@syncfusion/ej2-react-grids": "^20.1.61",
+    "@syncfusion/ej2-react-inputs": "^20.1.61",
+    "@syncfusion/ej2-react-kanban": "^20.1.60",
+    "@syncfusion/ej2-react-popups": "^20.1.58",
+    "@syncfusion/ej2-react-richtexteditor": "^20.1.61",
+    "@syncfusion/ej2-react-schedule": "^20.1.61",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -34,5 +43,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.19"
   }
 }
